--- a/src/donate.scss
+++ b/src/donate.scss
@@ -67,7 +67,7 @@ input.ng-pristine {
 
       /* donate button */
       .tank-up {
-        background: $btnFuel !important;
+        background: $donate no-repeat !important;
 
         &:hover {
           background-position: 0 -70px !important;
