--- a/src/klavotools/ignoreList.scss
+++ b/src/klavotools/ignoreList.scss
@@ -9,13 +9,13 @@
             td:has(img[src*="exclamation"]) {
               width: 35px !important;
               height: 35px !important;
-              background: $gray slash-icon($black) no-repeat center / 20px !important;
+              background: $gray icon("slash", $black) no-repeat center / 20px !important;
               border-radius: 5px !important;
               margin: 0 5px 0 0 !important;
               transition: background 0.1s ease-out !important;
 
               &:hover {
-                background: $blue slash-icon($black) no-repeat center / 20px !important;
+                background: $blue icon("slash", $black) no-repeat center / 20px !important;
               }
 
               img {
