--- a/src/gametypes.scss
+++ b/src/gametypes.scss
@@ -70,6 +70,7 @@ $gametype-icons: (
 #content .gametype-sign:not(.qual),
 #status .gametype-sign:not(.qual) {
   background-size: contain !important;
+  background-repeat: no-repeat !important;
   margin: 0 0 0 6px !important;
 }
 
@@ -127,11 +128,14 @@ $gametype-icons: (
     &::after {
       content: "" !important;
       position: absolute !important;
-      top: 6px !important;
-      left: 6px !important;
-      width: 100% !important;
-      height: 100% !important;
-      background: $qualificationMark !important;
+      top: 100% !important;
+      left: 100% !important;
+      transform: translate(-90%, -90%) !important;
+      width: 24px !important;
+      height: 24px !important;
+      border-radius: 50% !important;
+      background: darken($orange, 20%) icon("qualification", $yellow) no-repeat center /
+        24px !important;
     }
   }
 }
