--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -210,7 +210,7 @@ $gap: 10px;
               }
 
               &::before {
-                background: $show-comments-icon !important;
+                background: icon("messageCircle", $deepgray) no-repeat center / 16px !important;
               }
             }
           }
