--- a/src/login.scss
+++ b/src/login.scss
@@ -1,4 +1,5 @@
 @import "./data/variables";
+@import "./mixins";
 
 /* LOGIN BUTTON */
 
@@ -6,26 +7,25 @@
 .login-block {
   z-index: 100 !important;
   position: fixed !important;
-  display: flex !important;
-  align-items: center !important;
-  justify-content: center !important;
+  @include flex-layout();
   height: 45px !important;
   width: 45px !important;
+  border-radius: 0 0 0 5px !important;
   padding: 0 !important;
   color: transparent !important;
   right: 0 !important;
   top: 0 !important;
-  background: rgba(200, 200, 200, 0.2) !important;
-  transition: background 0.3s !important;
+  background: $gray !important;
+  transition: background 0.15s ease-in-out !important;
 
   &:hover {
-    background: rgba(200, 200, 200, 0.4) !important;
+    background: $blue !important;
   }
 
-  a {
+  #login-link {
     cursor: pointer !important;
     padding-left: unset !important;
-    background: transparent $key-icon no-repeat center center !important;
+    background: transparent icon("key", $black) no-repeat center / 24px !important;
     text-decoration: none !important;
     height: 45px !important;
     position: absolute !important;
@@ -46,23 +46,6 @@
 
 /* LOGIN FORM */
 
-/* Login input backgrounds */
-#username,
-#password {
-  color: $white !important;
-  background: $darkgray !important;
-  border: none !important;
-}
-
-/* Login && register popup close button */
-// .popup-box .close ins {
-//   filter: invert(60%) !important;
-
-//   &:hover {
-//     filter: invert(70%) !important;
-//   }
-// }
-
 /* Login form popup */
 #login-form {
   position: fixed !important;
@@ -78,77 +61,195 @@
   align-items: center !important;
   background-color: rgba(0, 0, 0, 0.5) !important;
 
-  .c {
-    background: darken($gray, 20%) !important;
-    padding: 0 !important;
-    height: 300px !important;
-    width: 250px !important;
-    border-radius: 5px !important;
+  table {
+    tbody {
+      tr {
+        td {
+          &.c {
+            background: $gray !important;
+            border-radius: 5px !important;
+            padding: 0 !important;
+            height: 250px !important;
+            width: 250px !important;
 
-    form {
-      margin-top: 45px;
-      padding-right: 0 !important;
-      height: 300px !important;
-    }
-  }
+            form {
+              padding: 0 !important;
 
-  dt,
-  dl,
-  dd {
-    margin: 0 !important;
-    padding: 0 !important;
-  }
+              dl {
+                margin: 0 !important;
+                padding: 0 !important;
+                width: 100% !important;
 
-  dd,
-  dl,
-  input {
-    width: 100% !important;
-  }
+                &#r_username {
+                  dt {
+                    label {
+                      display: none !important;
+                    }
+                  }
 
-  #username,
-  #password {
-    background-color: $blue !important;
-    height: 45px !important;
-    padding: 10px !important;
-    color: $deepgray !important;
-    text-align: center !important;
+                  dd {
+                    margin: 0 !important;
+                    padding: 0 !important;
+                    width: 100% !important;
 
-    &:active,
-    &:focus {
-      background-color: $lightblue !important;
-      transition: background-color 0.3s !important;
-    }
-  }
+                    #username {
+                      color: $white !important;
+                      background: $darkgray !important;
+                      border: none !important;
+                      background-color: $blue !important;
+                      height: 45px !important;
+                      padding: 10px !important;
+                      color: $deepgray !important;
+                      text-align: center !important;
+                      width: 100% !important;
+                      border-bottom: 1px solid $gray !important;
+                      background-image: $user-icon !important;
+                      background-position: 10px !important;
+                      background-repeat: no-repeat !important;
 
-  #username {
-    border-bottom: 1px solid #484a4e !important;
-    background-image: $user-icon !important;
-    background-position: 10px !important;
-    background-repeat: no-repeat !important;
-  }
+                      &:active,
+                      &:focus {
+                        background-color: $lightblue !important;
+                        transition: background-color 0.3s ease-in-out !important;
+                      }
+                    }
+                  }
+                }
 
-  #password {
-    margin-bottom: 10px !important;
-    background-image: $lock-icon !important;
-    background-position: 10px !important;
-    background-repeat: no-repeat !important;
-  }
+                &#r_password {
+                  dt {
+                    label {
+                      display: none !important;
+                    }
+                  }
 
-  // Login button
-  #login_form_submit {
-    width: 200px !important;
-    transform: translate(25px);
-    height: 45px !important;
-    border: 2px solid $blue !important;
-    border-radius: 25px !important;
-    background-color: $deepgray !important;
-    color: $blue !important;
-    text-transform: uppercase !important;
-    transition: all 0.15s !important;
+                  dd {
+                    margin: 0 !important;
+                    padding: 0 !important;
+                    width: 100% !important;
 
-    &:hover {
-      color: $lightblue !important;
-      border: 2px solid $lightblue !important;
+                    &.field {
+                      #password {
+                        color: $white !important;
+                        background: $darkgray !important;
+                        border: none !important;
+                        background-color: $blue !important;
+                        height: 45px !important;
+                        padding: 10px !important;
+                        color: $deepgray !important;
+                        text-align: center !important;
+                        width: 100% !important;
+                        margin-bottom: 10px !important;
+                        background-image: $lock-icon !important;
+                        background-position: 10px !important;
+                        background-repeat: no-repeat !important;
+
+                        &:active,
+                        &:focus {
+                          background-color: $lightblue !important;
+                          transition: background-color 0.3s ease-in-out !important;
+                        }
+                      }
+                    }
+                  }
+                }
+
+                &#r_login_form_submit {
+                  dt {
+                    // Empty dt
+                  }
+
+                  dd {
+                    margin: 0 !important;
+                    padding: 0 !important;
+                    width: 100% !important;
+
+                    #login_form_submit {
+                      width: 200px !important;
+                      transform: translate(25px);
+                      height: 45px !important;
+                      border: 2px solid $blue !important;
+                      border-radius: 25px !important;
+                      background-color: $deepgray !important;
+                      color: $blue !important;
+                      text-transform: uppercase !important;
+                      transition: all 0.15s !important;
+
+                      &:hover {
+                        color: $lightblue !important;
+                        border: 2px solid $lightblue !important;
+                      }
+                    }
+                  }
+                }
+
+                // Navigation dl (the one without id)
+                &:last-child {
+                  dt {
+                    // Empty dt
+                  }
+
+                  dd {
+                    margin: 0 !important;
+                    padding: 0 !important;
+                    width: 100% !important;
+
+                    .navigation {
+                      display: inline-flex !important;
+                      width: 100% !important;
+                      justify-content: center !important;
+
+                      li {
+                        margin-bottom: 0 !important;
+
+                        a {
+                          border-radius: 50% !important;
+                          background-color: rgba(200, 200, 200, 0.3) !important;
+                          display: block !important;
+                          width: 35px !important;
+                          height: 35px !important;
+                          font-size: 0 !important;
+                          border: 2px solid gray;
+                          transition: background-color 0.3s !important;
+
+                          &:hover {
+                            background-color: rgba(
+                              200,
+                              200,
+                              200,
+                              0.5
+                            ) !important;
+                            border: 2px solid lightgray;
+                          }
+
+                          &[href="/register/"] {
+                            margin-right: 10px !important;
+                            background-image: $user-plus-icon !important;
+                            background-repeat: no-repeat !important;
+                            background-position: center !important;
+                          }
+
+                          &[href="/remind/"] {
+                            margin-left: 10px !important;
+                            background-image: $user-check-icon !important;
+                            background-repeat: no-repeat !important;
+                            background-position: center !important;
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+
+              // Login and password description text color
+              label {
+                font-weight: lighter !important;
+              }
+            }
+          }
+        }
+      }
     }
   }
 
@@ -169,51 +270,6 @@
 
     ins {
       display: none !important;
-    }
-  }
-
-  // Login and password description text color
-  table label {
-    font-weight: lighter !important;
-  }
-
-  .navigation {
-    display: inline-flex !important;
-    width: 100% !important;
-    justify-content: center !important;
-
-    li {
-      margin-bottom: 0 !important;
-
-      a {
-        border-radius: 50% !important;
-        background-color: rgba(200, 200, 200, 0.3) !important;
-        display: block !important;
-        width: 35px !important;
-        height: 35px !important;
-        font-size: 0 !important;
-        border: 2px solid gray;
-        transition: background-color 0.3s !important;
-
-        &:hover {
-          background-color: rgba(200, 200, 200, 0.5) !important;
-          border: 2px solid lightgray;
-        }
-      }
-
-      &:nth-child(1) a {
-        margin-right: 10px !important;
-        background-image: $user-plus-icon !important;
-        background-repeat: no-repeat !important;
-        background-position: center !important;
-      }
-
-      &:nth-child(2) a {
-        margin-left: 10px !important;
-        background-image: $user-check-icon !important;
-        background-repeat: no-repeat !important;
-        background-position: center !important;
-      }
     }
   }
 }
