--- a/src/mainMenu/mainMenu-adaptive.scss
+++ b/src/mainMenu/mainMenu-adaptive.scss
@@ -37,7 +37,7 @@
         cursor: pointer !important;
         z-index: 10000 !important;
         border-radius: 0 0 5px 5px !important;
-        background: $menu !important;
+        background: $black icon("menu", $lightblue) no-repeat center / 20px !important;
       }
 
       .menu {
