--- a/src/data/variables.scss
+++ b/src/data/variables.scss
@@ -2,6 +2,7 @@
 @import "logo";
 @import "raster";
 @import "vector";
+@import "newGame";
 
 // Limited main container width on wide screens
 $container: 1300px;
