--- a/src/forum/_branchesList.scss
+++ b/src/forum/_branchesList.scss
@@ -113,7 +113,7 @@
           right: 0 !important;
           height: 100% !important;
           width: 70px !important;
-          background-image: $enterForumBranch !important;
+          background-image: icon("logIn", $lightblue) !important;
           background-position: center center !important;
           background-repeat: no-repeat !important;
           border-radius: 0 5px 5px 0 !important;
