raster background no-repeat removed from variables definition

--- a/src/data/_raster.scss
+++ b/src/data/_raster.scss
@@ -1,8 +1,8 @@
 // Button icon to open the virtual keyboard for newbies
-$virtualKeyboard: url("https://i.imgur.com/CVbMpI4.png") no-repeat;
+$virtualKeyboard: url("https://i.imgur.com/CVbMpI4.png");
 
 // Speed panel background image for speed and error monitoring
-$speedPanel: url("https://i.imgur.com/Qg4ztHC.png") no-repeat;
+$speedPanel: url("https://i.imgur.com/Qg4ztHC.png");
 
 // Award images for achievements
 $medal-award: url("https://i.imgur.com/JDhJqcC.png");
